Add cluster management API
